--- a/app/src/main/res/layout/activity_edit_template.xml
+++ b/app/src/main/res/layout/activity_edit_template.xml
@@ -2,45 +2,52 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/editTemplateLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.chad.smstrialapp.EditTemplate">
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="326dp"
-        android:layout_height="265dp"
-        android:layout_marginTop="48dp"
+        android:layout_width="313dp"
+        android:layout_height="33dp"
+        android:layout_marginTop="16dp"
+        android:gravity="top"
+        android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/editText"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="317dp"
+        android:layout_height="216dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="64dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:gravity="top"/>
 
-
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/saveText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="84dp"
-        android:layout_marginTop="36dp"
-        android:text="Cancel"
-        app:layout_constraintEnd_toStartOf="@+id/button4"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        android:layout_marginRight="84dp" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="236dp"
+        android:layout_marginTop="308dp"
         android:text="Save"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintEnd_toStartOf="@+id/button3"
-        tools:layout_editor_absoluteX="236dp" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="236dp"
+        />
 </android.support.constraint.ConstraintLayout>
