--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,15 +17,15 @@
         android:onClick="CreateText"
         android:text="Send SMS"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/EditTemplateButton"
         android:layout_marginStart="18dp"
         tools:layout_constraintLeft_creator="1"
         android:layout_marginBottom="26dp"
-        app:layout_constraintLeft_toLeftOf="@+id/button"
+        app:layout_constraintLeft_toLeftOf="@+id/EditTemplateButton"
         android:layout_marginLeft="18dp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/EditTemplateButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="209dp"
@@ -39,27 +39,26 @@
         tools:layout_constraintTop_creator="1" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/Pause"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="23dp"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        android:text="Pause"
+        app:layout_constraintLeft_toLeftOf="@+id/EditTemplateButton"
+        app:layout_constraintTop_toBottomOf="@+id/EditTemplateButton"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/button"
-        android:layout_marginLeft="20dp" />
+        tools:layout_constraintTop_creator="1" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/Picture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/piano"
         android:scaleType="fitXY"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/piano"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
 </android.support.constraint.ConstraintLayout>
