--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="23dp"
+        android:onClick="GoogleGoodness"
         android:text="Pause"
         app:layout_constraintLeft_toLeftOf="@+id/EditTemplateButton"
         app:layout_constraintTop_toBottomOf="@+id/EditTemplateButton"
