--- a/app/src/main/res/layout/activity_send_text.xml
+++ b/app/src/main/res/layout/activity_send_text.xml
@@ -31,4 +31,10 @@
         android:layout_height="wrap_content"
         android:text="Send SMS"
         />
+
+    <Button
+        android:id="@+id/loadTemp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button" />
 </LinearLayout>
