--- a/app/src/main/res/layout/activity_edit_template.xml
+++ b/app/src/main/res/layout/activity_edit_template.xml
@@ -11,11 +11,11 @@
         android:id="@+id/textView"
         android:layout_width="313dp"
         android:layout_height="33dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="28dp"
         android:gravity="top"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintHorizontal_bias="0.225"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,4 +50,28 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginLeft="236dp"
         />
+
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/saveText" />
+
+    <!--<Button
+        android:id="@+id/deleteTemp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="28dp"
+        android:text="Delete Template"
+        app:layout_constraintEnd_toStartOf="@+id/saveText"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/templateText"
+        android:layout_marginRight="8dp" />-->
+
 </android.support.constraint.ConstraintLayout>
