--- a/app/src/main/res/layout/activity_send_text.xml
+++ b/app/src/main/res/layout/activity_send_text.xml
@@ -36,5 +36,5 @@
         android:id="@+id/loadTemp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="Load Template" />
 </LinearLayout>
