--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="23dp"
         android:onClick="GoogleGoodness"
-        android:text="Pause"
+        android:text="Pull Appointments"
         app:layout_constraintLeft_toLeftOf="@+id/EditTemplateButton"
         app:layout_constraintTop_toBottomOf="@+id/EditTemplateButton"
         tools:layout_constraintLeft_creator="1"
